{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 6,
  "lineage": "6943c903-ffdf-ae8a-87fc-7a270dd7e127",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-04T13:35:45.759-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-akintade/global/firewalls/allow-http-https",
            "log_config": [],
            "name": "allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/project-akintade/global/networks/bauhaus-custom-vpc",
            "priority": 1000,
            "project": "project-akintade",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-akintade/global/firewalls/allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-07-04T13:35:45.533-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-akintade/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/project-akintade/global/networks/bauhaus-custom-vpc",
            "priority": 1000,
            "project": "project-akintade",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-akintade/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/project-akintade/global/networks/bauhaus-custom-vpc",
            "mtu": 0,
            "name": "bauhaus-custom-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "3008017221114234342",
            "numeric_id": "3008017221114234342",
            "project": "project-akintade",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-akintade/global/networks/bauhaus-custom-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-04T13:35:45.829-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.10.0.1",
            "id": "projects/project-akintade/regions/us-central1/subnetworks/subnet-1",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/project-akintade/global/networks/bauhaus-custom-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-akintade",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-akintade/regions/us-central1/subnetworks/subnet-1",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": -1228569138
          },
          "dependencies": [
            "google_compute_network.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-07-04T13:35:45.395-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.20.0.1",
            "id": "projects/project-akintade/regions/europe-west1/subnetworks/subnet-2",
            "ip_cidr_range": "10.20.0.0/24",
            "name": "subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/project-akintade/global/networks/bauhaus-custom-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-akintade",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-akintade/regions/europe-west1/subnetworks/subnet-2",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": -1228569138
          },
          "dependencies": [
            "google_compute_network.custom_vpc"
          ]
        }
      ]
    }
  ]
}